welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value Direction
  while (!(estFaceMur() && (getDirection()==Direction.EAST))) {
                                            ^